--- a/Shuffle2/Shuffle2/Base.lproj/Main.storyboard
+++ b/Shuffle2/Shuffle2/Base.lproj/Main.storyboard
@@ -30,7 +30,13 @@
                                 <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <navigationItem title="Main" id="g4Z-ib-md0"/>
+                                    <navigationItem title="Main" id="g4Z-ib-md0">
+                                        <barButtonItem key="rightBarButtonItem" title="Entry" id="4NF-ZH-0xl">
+                                            <connections>
+                                                <segue destination="1yR-qB-Hr4" kind="modal" identifier="toEntry" modalTransitionStyle="flipHorizontal" id="6Ao-KS-zIF"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
                                 </items>
                             </navigationBar>
                         </subviews>
@@ -39,7 +45,87 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="78" y="51"/>
+            <point key="canvasLocation" x="-720" y="361"/>
+        </scene>
+        <!--Entry Table View Controller-->
+        <scene sceneID="ikE-T2-zSy">
+            <objects>
+                <tableViewController id="2nc-UO-Qk2" userLabel="Entry Table View Controller" customClass="EntryTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="UrP-Hc-2Lu">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="q6f-rG-rHo">
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="q6f-rG-rHo" id="5LN-YN-qoS">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="2nc-UO-Qk2" id="QSw-s5-lO5"/>
+                            <outlet property="delegate" destination="2nc-UO-Qk2" id="w0B-O4-qJe"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="All Entries" id="JGx-Up-oRp">
+                        <barButtonItem key="leftBarButtonItem" title="Done" id="Jh5-u6-539">
+                            <connections>
+                                <action selector="done:" destination="2nc-UO-Qk2" id="WdL-jx-Eko"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="d7j-7v-Nx6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="225" y="361"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Lfk-zj-JhV">
+            <objects>
+                <viewController id="nCI-Zh-FK7" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="c83-F4-gfB"/>
+                        <viewControllerLayoutGuide type="bottom" id="Xny-sf-uIj"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="l8Q-iM-g4l">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tRB-Kj-hQp">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Entry" id="gXZ-e5-PVg">
+                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="IAp-bP-g02"/>
+                                        <barButtonItem key="rightBarButtonItem" title="Paticipate" id="gfp-dh-5BG"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rwW-CS-rCw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="625" y="559"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="jxS-GU-Pi6">
+            <objects>
+                <navigationController definesPresentationContext="YES" id="1yR-qB-Hr4" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FQQ-rd-6F3">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="2nc-UO-Qk2" kind="relationship" relationship="rootViewController" id="0cc-tg-Hx3"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UgI-KP-0V4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-210" y="174"/>
         </scene>
         <!--Result View Controller-->
         <scene sceneID="StV-ea-cKQ">
@@ -82,7 +168,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hJo-PX-9ma" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="78" y="747"/>
+            <point key="canvasLocation" x="-210" y="909"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
